# learn-codex

./: .gitignore  Cargo.toml  README.en.md  README.md
skills/rust-review/: SKILL.md
src/: agent_team.rs
src/examples/step01/: README.en.md  README.md  sandbox.rs  step01.rs
src/examples/step02/: README.en.md  README.md  sandbox.rs  step02.rs
src/examples/step03/: README.en.md  README.md  sandbox.rs  step03.rs
src/examples/step04/: README.en.md  README.md  sandbox.rs  step04.rs
src/examples/step05/: README.en.md  README.md  sandbox.rs  step05.rs
src/examples/step06/: README.en.md  README.md  sandbox.rs  skills.rs  step06.rs
src/examples/step07/: README.en.md  README.md  agent_team.rs  sandbox.rs  step07.rs
src/examples/step08/: README.en.md  README.md  agent_team.rs  sandbox.rs  step08.rs
src/examples/step09/: README.en.md  README.md  sandbox.rs  step09.rs
